--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
         "rlite-router": "1.1.3",
         "signals": "1.0.0",
         "whatwg-fetch": "2.0.3",
-        "zanimo": "git://github.com/veloce/Zanimo"
+        "zanimo": "git+https://github.com/veloce/Zanimo.git"
     },
     "scripts": {
         "lint": "tslint --project tsconfig.json -e '**/dts/**' -e '**/*.js'",
