--- a/package.json
+++ b/package.json
@@ -52,18 +52,18 @@
         "@types/d3": "4.5.0",
         "@types/hammerjs": "2.0.35",
         "com.rjfun.cordova.plugin.lowlatencyaudio": "https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
-        "cordova-android": "7.0.0",
+        "cordova-android": "7.1.0",
         "cordova-ios": "4.5.4",
-        "cordova-plugin-app-event": "git+https://github.com/katzer/cordova-plugin-app-event.git#1.2.1",
         "cordova-plugin-appversion": "1.0.0",
-        "cordova-plugin-crosswalk-webview": "2.4.0",
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-dialogs": "1.3.1",
-        "cordova-plugin-file-transfer": "1.6.1",
+        "cordova-plugin-file": "6.0.1",
         "cordova-plugin-fullscreen": "1.1.0",
         "cordova-plugin-globalization": "1.0.5",
         "cordova-plugin-inappbrowser": "1.6.1",
         "cordova-plugin-insomnia": "4.2.0",
+        "cordova-plugin-ionic-keyboard": "2.0.5",
+        "cordova-plugin-nativeaudio": "git+https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-splashscreen": "4.1.0",
         "cordova-plugin-statusbar": "2.3.0",
@@ -72,22 +72,19 @@
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-plugin-x-socialsharing": "5.1.3",
         "cordova-plugin-x-toast": "2.5.2",
-        "cordova-universal-links-plugin": "git+https://github.com/flipflopapp/cordova-universal-links-plugin.git#be60a9b",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
         "d3-selection": "1.1.0",
         "d3-shape": "1.2.0",
         "d3-time": "1.0.7",
         "d3-time-format": "2.0.5",
-        "de.appplant.cordova.plugin.local-notification": "git+https://github.com/katzer/cordova-plugin-local-notifications.git#0.8.5",
         "hammerjs": "2.0.8",
-        "ionic-plugin-keyboard": "2.2.1",
         "iscroll": "5.1.3",
         "localforage": "1.5.5",
         "lodash": "4.17.4",
         "mithril": "1.1.6",
         "moment": "2.21.0",
-        "onesignal-cordova-plugin": "2.2.4",
+        "onesignal-cordova-plugin": "2.3.3",
         "raven-js": "3.17.0",
         "rlite-router": "1.1.3",
         "signals": "1.0.0",
@@ -123,19 +120,14 @@
     },
     "cordova": {
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "com.rjfun.cordova.plugin.lowlatencyaudio": {},
             "cordova-plugin-appversion": {},
-            "cordova-plugin-crosswalk-webview": {
-                "XWALK_MODE": "embedded",
-                "XWALK_MULTIPLEAPK": "true"
-            },
             "cordova-plugin-device": {},
             "cordova-plugin-dialogs": {},
-            "cordova-plugin-file-transfer": {},
             "cordova-plugin-fullscreen": {},
             "cordova-plugin-globalization": {},
             "cordova-plugin-inappbrowser": {},
@@ -144,15 +136,13 @@
             "cordova-plugin-whitelist": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-x-toast": {},
-            "ionic-plugin-keyboard": {},
-            "onesignal-cordova-plugin": {},
-            "cordova-plugin-app-event": {},
-            "de.appplant.cordova.plugin.local-notification": {},
-            "cordova-universal-links-plugin": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-network-information": {},
-            "cordova-plugin-stockfish": {}
+            "cordova-plugin-stockfish": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-file": {},
+            "onesignal-cordova-plugin": {}
         }
     },
     "jest": {
