--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "cordova-android": "7.1.0",
         "cordova-ios": "4.5.4",
         "cordova-plugin-appversion": "1.0.0",
+        "cordova-plugin-badge": "0.8.7",
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-dialogs": "1.3.1",
         "cordova-plugin-file": "6.0.1",
@@ -63,6 +64,7 @@
         "cordova-plugin-inappbrowser": "1.6.1",
         "cordova-plugin-insomnia": "4.2.0",
         "cordova-plugin-ionic-keyboard": "2.0.5",
+        "cordova-plugin-local-notification": "git+https://github.com/katzer/cordova-plugin-local-notifications.git#0.9.0-beta.3",
         "cordova-plugin-nativeaudio": "git+https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-splashscreen": "4.1.0",
@@ -144,7 +146,8 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-file": {},
             "onesignal-cordova-plugin": {},
-            "cordova-universal-links-plugin": {}
+            "cordova-universal-links-plugin": {},
+            "cordova-plugin-local-notification": {}
         }
     },
     "jest": {
