Build with es2015 preset

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "babel-plugin-transform-react-require": "1.0.1",
         "babel-plugin-transform-remove-console": "6.8.0",
         "babel-preset-env": "1.6.1",
+        "babel-preset-es2015": "6.24.1",
         "babelify": "8.0.0",
         "browserify": "14.5.0",
         "gulp": "3.9.1",
@@ -73,6 +74,7 @@
         "cordova-plugin-x-socialsharing": "5.1.3",
         "cordova-plugin-x-toast": "2.5.2",
         "cordova-universal-links-plugin": "git+https://github.com/veloce/cordova-universal-links-plugin.git#c494fe1",
+        "core-js": "2.5.7",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
         "d3-selection": "1.1.0",
