--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "mithril": "github:MithrilJS/mithril.js#6bf7be8",
         "moment": "2.21.0",
         "onesignal-cordova-plugin": "2.3.3",
+        "raven-js": "3.26.3",
         "rlite-router": "1.1.3",
         "siema": "1.5.1",
         "signals": "1.0.0",
