--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-statusbar": "2.4.2",
-        "cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#v1.7.0",
+        "cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#v1.8.0",
         "cordova-plugin-vibration": "3.1.0",
         "cordova-plugin-whitelist": "1.3.3",
         "cordova-plugin-x-socialsharing": "5.1.3",
@@ -137,7 +137,6 @@
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-x-toast": {},
             "cordova-plugin-network-information": {},
-            "cordova-plugin-stockfish": {},
             "cordova-plugin-file": {},
             "onesignal-cordova-plugin": {},
             "cordova-universal-links-plugin": {},
@@ -149,7 +148,8 @@
             "cordova-plugin-fullscreen": {},
             "cordova-plugin-globalization": {},
             "cordova-plugin-crosswalk-data-migration": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-stockfish": {}
         }
     },
     "jest": {
