--- a/package.json
+++ b/package.json
@@ -125,8 +125,8 @@
     },
     "cordova": {
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "com.rjfun.cordova.plugin.lowlatencyaudio": {},
