Replace gulp-util with fancy-log and chalk

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "babel-preset-es2015": "6.24.1",
         "babelify": "8.0.0",
         "browserify": "14.5.0",
+        "chalk": "2.4.2",
+        "fancy-log": "1.3.3",
         "gulp": "3.9.1",
         "gulp-autoprefixer": "6.1.0",
         "gulp-preprocess": "2.0.0",
@@ -38,7 +40,6 @@
         "gulp-sourcemaps": "2.4.0",
         "gulp-stylus": "2.7.0",
         "gulp-uglify-es": "1.0.1",
-        "gulp-util": "3.0.7",
         "jest": "23.6.0",
         "minimist": "1.2.0",
         "ncp": "2.0.0",
