Upgrade jest and typescript

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "homepage": "https://github.com/veloce/lichobile",
     "devDependencies": {
-        "@types/jest": "23.3.2",
+        "@types/jest": "24.0.11",
+        "babel-core": "6.26.3",
         "babel-plugin-transform-react-jsx": "6.24.1",
         "babel-plugin-transform-react-require": "1.0.1",
         "babel-plugin-transform-remove-console": "6.8.0",
@@ -40,12 +41,12 @@
         "gulp-sourcemaps": "2.4.0",
         "gulp-stylus": "2.7.0",
         "gulp-uglify-es": "1.0.1",
-        "jest": "23.6.0",
+        "jest": "24.7.1",
         "minimist": "1.2.0",
         "ncp": "2.0.0",
         "tsify": "3.0.4",
         "tslint": "5.8.0",
-        "typescript": "2.8.1",
+        "typescript": "3.4.5",
         "vinyl-buffer": "1.0.1",
         "vinyl-source-stream": "2.0.0",
         "watchify": "3.11.1"
