--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "cordova-plugin-insomnia": "4.2.0",
         "cordova-plugin-nativeaudio": "github:veloce/cordova-plugin-nativeaudio#old_interface",
         "cordova-plugin-network-information": "2.0.2",
-        "cordova-plugin-splashscreen": "5.0.3",
+        "cordova-plugin-splashscreen": "git+https://github.com/prageeth/cordova-plugin-splashscreen.git#05d8f9",
         "cordova-plugin-statusbar": "2.4.2",
         "cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#7cc6722",
         "cordova-plugin-vibration": "3.1.0",
