--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "dependencies": {
         "@types/d3": "4.5.0",
         "@types/hammerjs": "2.0.35",
+        "com.rjfun.cordova.plugin.lowlatencyaudio": "https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-android": "8.0.0",
         "cordova-ios": "5.0.1",
         "cordova-plugin-appversion": "1.0.0",
-        "cordova-plugin-crosswalk-data-migration": "git+https://github.com/veloce/cordova-plugin-crosswalk-data-migration.git#225408d",
         "cordova-plugin-device": "2.0.2",
         "cordova-plugin-dialogs": "2.0.1",
         "cordova-plugin-file": "6.0.1",
@@ -66,6 +66,8 @@
         "cordova-plugin-globalization": "1.11.0",
         "cordova-plugin-inappbrowser": "3.0.0",
         "cordova-plugin-insomnia": "4.2.0",
+        "cordova-plugin-ionic-keyboard": "2.2.0",
+        "cordova-plugin-ionic-webview": "4.1.1",
         "cordova-plugin-nativeaudio": "github:veloce/cordova-plugin-nativeaudio#old_interface",
         "cordova-plugin-network-information": "2.0.2",
         "cordova-plugin-splashscreen": "git+https://github.com/prageeth/cordova-plugin-splashscreen.git#05d8f9",
@@ -84,7 +86,6 @@
         "d3-time": "1.0.7",
         "d3-time-format": "2.0.5",
         "hammerjs": "2.0.8",
-        "ionic-plugin-keyboard": "2.2.1",
         "localforage": "1.5.5",
         "lodash": "4.17.15",
         "mithril": "github:MithrilJS/mithril.js#v2.0.0-rc.4",
@@ -119,16 +120,15 @@
         "ios-stage": "npm run build-cordova-stage && cordova run ios --browserify",
         "ios-prod": "npm run build-cordova-prod && cordova run ios --browserify",
         "prepare-ios-dev": "npm run build-cordova-dev && cordova prepare ios --browserify",
-        "prepare-ios-stage": "npm run build-cordova-stage && cordova prepare ios --browserify",
-        "prepare-ios-prod": "npm run build-cordova-prod && cordova prepare ios --browserify",
+        "prepare-ios-stage": "npm run build-cordova-stage && cordova prepare ios",
+        "prepare-ios-prod": "npm run build-cordova-prod && cordova prepare ios",
         "release-android": "npm run build-cordova-release && cordova build android --release --browserify",
         "release-android-4.4": "npm run build-cordova-release && cordova build android --release --browserify -- --minSdkVersion=19",
         "release-ios": "npm run build-cordova-release && cordova build ios --release --browserify"
     },
     "cordova": {
         "platforms": [
-            "ios",
-            "android"
+            "ios"
         ],
         "plugins": {
             "cordova-plugin-appversion": {},
@@ -143,15 +143,18 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-fullscreen": {},
             "cordova-plugin-globalization": {},
-            "cordova-plugin-crosswalk-data-migration": {},
-            "ionic-plugin-keyboard": {},
             "cordova-plugin-x-toast": {},
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-network-information": {},
             "cordova-plugin-splashscreen": {},
             "onesignal-cordova-plugin": {},
-            "cordova-plugin-stockfish": {}
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
+            "com.rjfun.cordova.plugin.lowlatencyaudio": {},
+            "cordova-plugin-stockfish": {},
+            "cordova-plugin-ionic-keyboard": {}
         }
     },
     "jest": {
