Restore android platform

--- a/package.json
+++ b/package.json
@@ -128,7 +128,8 @@
     },
     "cordova": {
         "platforms": [
-            "ios"
+            "ios",
+            "android"
         ],
         "plugins": {
             "cordova-plugin-appversion": {},
