--- a/package.json
+++ b/package.json
@@ -56,28 +56,11 @@
         "com.rjfun.cordova.plugin.lowlatencyaudio": "https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-android": "8.0.0",
         "cordova-ios": "5.0.1",
-        "cordova-plugin-appversion": "1.0.0",
-        "cordova-plugin-device": "2.0.2",
-        "cordova-plugin-dialogs": "2.0.1",
-        "cordova-plugin-file": "6.0.1",
-        "cordova-plugin-file-transfer": "1.7.1",
         "cordova-plugin-fullscreen": "1.2.0",
-        "cordova-plugin-globalization": "1.11.0",
-        "cordova-plugin-inappbrowser": "3.0.0",
         "cordova-plugin-insomnia": "4.2.0",
-        "cordova-plugin-ionic-keyboard": "2.2.0",
-        "cordova-plugin-ionic-webview": "4.1.2",
         "cordova-plugin-nativeaudio": "github:veloce/cordova-plugin-nativeaudio#old_interface",
-        "cordova-plugin-network-information": "2.0.2",
-        "cordova-plugin-splashscreen": "git+https://github.com/prageeth/cordova-plugin-splashscreen.git#05d8f9",
-        "cordova-plugin-statusbar": "2.4.2",
         "cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#58dc23e",
-        "cordova-plugin-vibration": "3.1.0",
         "cordova-plugin-webview-checker": "1.0.0",
-        "cordova-plugin-whitelist": "1.3.3",
-        "cordova-plugin-x-socialsharing": "5.1.3",
-        "cordova-plugin-x-toast": "2.7.2",
-        "cordova-universal-links-plugin": "git+https://github.com/veloce/cordova-universal-links-plugin.git#c494fe1",
         "core-js": "2.5.7",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
@@ -132,31 +115,12 @@
             "android"
         ],
         "plugins": {
-            "cordova-plugin-appversion": {},
-            "cordova-plugin-device": {},
             "cordova-plugin-insomnia": {},
-            "cordova-plugin-x-socialsharing": {},
-            "cordova-plugin-file": {},
-            "cordova-universal-links-plugin": {},
-            "cordova-plugin-dialogs": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-vibration": {},
-            "cordova-plugin-statusbar": {},
             "cordova-plugin-fullscreen": {},
-            "cordova-plugin-globalization": {},
-            "cordova-plugin-x-toast": {},
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-splashscreen": {},
             "onesignal-cordova-plugin": {},
             "com.rjfun.cordova.plugin.lowlatencyaudio": {},
             "cordova-plugin-stockfish": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-webview-checker": {},
-            "cordova-plugin-ionic-webview": {
-                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-            }
+            "cordova-plugin-webview-checker": {}
         }
     },
     "jest": {
