More wip: fixes, dependency updates

--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
         "url": "https://github.com/veloce/lichobile/issues"
     },
     "homepage": "https://github.com/veloce/lichobile",
+    "browserslist": "and_chr >= 58, ios_saf >= 11",
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "7.3.0",
+        "@babel/preset-env": "7.6.2",
         "@types/jest": "24.0.11",
-        "babel-core": "6.26.3",
-        "babel-plugin-transform-react-jsx": "6.24.1",
         "babel-plugin-transform-react-require": "1.0.1",
-        "babel-plugin-transform-remove-console": "6.8.0",
-        "babel-preset-env": "1.6.1",
-        "babelify": "8.0.0",
+        "babel-plugin-transform-remove-console": "6.9.4",
+        "babelify": "10.0.0",
         "browserify": "14.5.0",
         "chalk": "2.4.2",
         "fancy-log": "1.3.3",
         "gulp": "4.0.2",
-        "gulp-autoprefixer": "6.1.0",
+        "gulp-autoprefixer": "7.0.0",
         "gulp-preprocess": "3.0.2",
         "gulp-rename": "1.2.2",
         "gulp-sourcemaps": "2.4.0",
@@ -48,7 +48,8 @@
         "typescript": "3.4.5",
         "vinyl-buffer": "1.0.1",
         "vinyl-source-stream": "2.0.0",
-        "watchify": "3.11.1"
+        "watchify": "3.11.1",
+        "whatwg-fetch": "3.0.0"
     },
     "dependencies": {
         "@capacitor/android": "1.2.1",
@@ -60,7 +61,7 @@
         "com.rjfun.cordova.plugin.lowlatencyaudio": "https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-plugin-fullscreen": "1.2.0",
         "cordova-plugin-insomnia": "4.2.0",
-        "cordova-plugin-nativeaudio": "github:veloce/cordova-plugin-nativeaudio#old_interface",
+        "cordova-plugin-nativeaudio": "git+https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#58dc23e",
         "cordova-plugin-webview-checker": "1.0.0",
         "d3-axis": "1.0.8",
@@ -83,31 +84,15 @@
     "scripts": {
         "version": "node scripts/bump_version.js",
         "lint": "tslint --project tsconfig.json -e '**/dts/**' -e '**/*.js'",
-        "build": "gulp",
         "test": "jest",
         "watch": "gulp watch",
-        "watch-dev": "gulp watch --env=env-dev.json",
         "watch-stage": "gulp watch --env=env-stage.json",
         "watch-prod": "gulp watch --env=env-prod.json",
-        "build-stage": "BABEL_ENV=production gulp --mode='release' --env=env-stage.json",
-        "prebuild-stage": "npm run lint && npm run test",
-        "build-cordova-dev": "gulp --target='cordova' --env=env-dev.json",
-        "build-cordova-stage": "gulp --target='cordova' --env=env-stage.json",
-        "build-cordova-prod": "gulp --target='cordova' --env=env-prod.json",
-        "build-cordova-release": "BABEL_ENV=production gulp --mode='release' --target='cordova' --env=env-prod.json",
-        "android-dev": "npm run build-cordova-dev && cordova run android --browserify",
-        "android-stage": "npm run build-cordova-stage && cordova run android --browserify",
-        "android-prod": "npm run build-cordova-prod && cordova run android --browserify",
-        "android-release": "npm run build-cordova-release && cordova run android --browserify",
-        "ios-dev": "npm run build-cordova-dev && cordova run ios --browserify",
-        "ios-stage": "npm run build-cordova-stage && cordova run ios --browserify",
-        "ios-prod": "npm run build-cordova-prod && cordova run ios --browserify",
-        "prepare-ios-dev": "npm run build-cordova-dev && cordova prepare ios --browserify",
-        "prepare-ios-stage": "npm run build-cordova-stage && cordova prepare ios",
-        "prepare-ios-prod": "npm run build-cordova-prod && cordova prepare ios",
-        "release-android": "npm run build-cordova-release && cordova build android --release --browserify",
-        "release-android-4.4": "npm run build-cordova-release && cordova build android --release --browserify -- --minSdkVersion=19",
-        "release-ios": "npm run build-cordova-release && cordova build ios --release --browserify"
+        "prebuild": "npm run lint && npm run test",
+        "build": "gulp --target='capacitor'",
+        "build-stage": "npm run build -- --env=env-stage.json",
+        "build-prod": "npm run build -- --env=env-prod.json",
+        "build-release": "BABEL_ENV=production npm run build -- --mode='release' --env=env-prod.json"
     },
     "cordova": {
         "platforms": [],
