WIP on capacitor-sound-effect: web & android

--- a/package.json
+++ b/package.json
@@ -59,10 +59,9 @@
         "@types/d3": "4.5.0",
         "@types/hammerjs": "2.0.35",
         "capacitor-cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#capacitor",
-        "com.rjfun.cordova.plugin.lowlatencyaudio": "https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
+        "capacitor-sound-effect": "file:../capacitor-sound-effect",
         "cordova-plugin-fullscreen": "1.2.0",
         "cordova-plugin-insomnia": "4.2.0",
-        "cordova-plugin-nativeaudio": "git+https://github.com/veloce/cordova-plugin-nativeaudio.git#old_interface",
         "cordova-plugin-webview-checker": "1.0.0",
         "d3-axis": "1.0.8",
         "d3-scale": "1.0.6",
