Remove all mithril keys

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "babelify": "10.0.0",
         "browserify": "14.5.0",
         "chalk": "2.4.2",
+        "concurrently": "5.0.0",
         "fancy-log": "1.3.3",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.0",
@@ -92,9 +93,9 @@
         "test": "jest",
         "compile": "tsc --outDir build/",
         "compile-watch": "tsc -w --outDir build/",
-        "watch": "gulp watch",
-        "watch-stage": "gulp watch --env=env-stage.json",
-        "watch-prod": "gulp watch --env=env-prod.json",
+        "build-web": "rollup -c",
+        "watch-web": "rollup --silent -w -c",
+        "watch": "npm run compile && concurrently 'npm:compile-watch' 'npm:watch-web'",
         "prebuild": "npm run lint && npm run test",
         "build": "gulp --target='capacitor' && npx cap copy",
         "build-stage": "npm run build -- --env=env-stage.json",
