--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "gulp-stylus": "2.7.0",
         "jest": "24.7.1",
         "minimist": "1.2.0",
+        "mustache": "3.1.0",
         "ncp": "2.0.0",
         "rollup": "1.23.1",
         "rollup-plugin-commonjs": "10.1.0",
@@ -59,6 +60,7 @@
         "@types/hammerjs": "2.0.35",
         "@types/lodash-es": "4.17.3",
         "@types/mithril": "2.0.0",
+        "autoprefixer-stylus": "1.0.0",
         "capacitor-cordova-plugin-stockfish": "git+https://github.com/veloce/cordova-plugin-stockfish.git#capacitor",
         "capacitor-sound-effect": "file:../capacitor-sound-effect",
         "cordova-plugin-fullscreen": "1.2.0",
@@ -80,19 +82,23 @@
         "rlite-router": "1.1.3",
         "siema": "1.5.1",
         "signals": "1.0.0",
+        "stylus": "0.54.7",
         "zanimo": "git+https://github.com/veloce/Zanimo.git"
     },
     "scripts": {
+        "start": "npm run compile && npm run watch",
         "version": "node scripts/bump_version.js",
         "lint": "tslint --project tsconfig.json -e '**/dts/**' -e '**/*.js'",
         "test": "jest",
+        "styles": "stylus -q -u autoprefixer-stylus src/styl/index.styl -c -o www/css/compiled/app.css",
+        "styles-watch": "stylus -w -q -u autoprefixer-stylus src/styl/index.styl -o www/css/compiled/app.css",
         "compile": "tsc --outDir build/",
         "compile-watch": "tsc -w --outDir build/",
-        "build-web": "rollup -c",
-        "watch-web": "rollup --silent -w -c",
-        "watch": "npm run compile && concurrently 'npm:compile-watch' 'npm:watch-web'",
+        "web-build": "npm run compile && rollup -c",
+        "web-watch": "rollup -w -c",
+        "watch": "concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run lint && npm run test",
-        "build": "gulp --target='capacitor' && npx cap copy",
+        "build": "concurrently 'npm:styles' 'npm:web-build' && npx cap copy",
         "build-stage": "npm run build -- --env=env-stage.json",
         "build-prod": "npm run build -- --env=env-prod.json",
         "build-release": "BABEL_ENV=production npm run build -- --mode='release' --env=env-prod.json"
