--- a/package.json
+++ b/package.json
@@ -31,14 +31,9 @@
         "concurrently": "5.0.0",
         "fancy-log": "1.3.3",
         "gulp": "4.0.2",
-        "gulp-autoprefixer": "7.0.0",
         "gulp-preprocess": "3.0.2",
-        "gulp-rename": "1.2.2",
-        "gulp-sourcemaps": "2.4.0",
-        "gulp-stylus": "2.7.0",
         "jest": "24.7.1",
         "minimist": "1.2.0",
-        "mustache": "3.1.0",
         "ncp": "2.0.0",
         "rollup": "1.23.1",
         "rollup-plugin-commonjs": "10.1.0",
@@ -96,9 +91,9 @@
         "compile-watch": "tsc -w --outDir build/",
         "web-build": "npm run compile && rollup -c",
         "web-watch": "rollup -w -c",
-        "watch": "concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
+        "watch": "concurrently 'npx gulp watch' 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run lint",
-        "build": "concurrently 'npm:styles' 'npm:web-build' && npx cap copy",
+        "build": "concurrently 'npm:styles' 'npm:web-build' && npx gulp html",
         "build-stage": "npm run build -- --env=env-stage.json",
         "build-prod": "npm run build -- --env=env-prod.json",
         "build-release": "BABEL_ENV=production npm run build -- --mode='release' --env=env-prod.json"
