--- a/package.json
+++ b/package.json
@@ -27,13 +27,9 @@
         "@babel/preset-env": "7.6.2",
         "@types/jest": "24.0.11",
         "babel-plugin-transform-remove-console": "6.9.4",
-        "chalk": "2.4.2",
         "concurrently": "5.0.0",
-        "fancy-log": "1.3.3",
-        "gulp": "4.0.2",
-        "gulp-preprocess": "3.0.2",
         "jest": "24.7.1",
-        "minimist": "1.2.0",
+        "mustache": "3.1.0",
         "ncp": "2.0.0",
         "rollup": "1.23.1",
         "rollup-plugin-commonjs": "10.1.0",
@@ -91,12 +87,9 @@
         "compile-watch": "tsc -w --outDir build/",
         "web-build": "npm run compile && rollup -c",
         "web-watch": "rollup -w -c",
-        "watch": "concurrently 'npx gulp watch' 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
+        "watch": "node scripts/process_html && concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run lint && npm run test",
-        "build": "concurrently 'npm:styles' 'npm:web-build' && npx gulp html",
-        "build-stage": "npm run build -- --env=env-stage.json",
-        "build-prod": "npm run build -- --env=env-prod.json",
-        "build-release": "BABEL_ENV=production npm run build -- --mode='release' --env=env-prod.json"
+        "build": "node scripts/process_html && concurrently 'npm:styles' 'npm:web-build'"
     },
     "cordova": {
         "platforms": [],
