--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
         "web-watch": "npm run web-clean && rollup -w -c",
         "watch": "node scripts/process_html && concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run lint && npm run test && npm run web-clean",
-        "build": "node scripts/process_html && concurrently 'npm:styles' 'npm:web-build'"
+        "build": "node scripts/process_html && concurrently 'npm:styles' 'npm:web-build'",
+        "build-capacitor": "APP_TARGET=native npm run build && npx cap copy"
     },
     "cordova": {
         "platforms": [],
