--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+jdk: oraclejdk8
 android:
    components:
       - tools
@@ -9,24 +10,16 @@ android:
       - extra-google-m2repository
       - extra-android-m2repository
 sudo: false
-jdk:
-    - oraclejdk8
-env:
-    global:
-      - ANDROID_TOOLS=${ANDROID_HOME}/tools
 before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55\nd56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n504667f4c0de7af1a06de9f4b1727b84351f2910" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-  - nvm install 8.10.0
+  - nvm install 10.16.3
   - echo y | sdkmanager "ndk-bundle"
 install:
-  - npm install -g npm@5.8.0
-  - npm install -g cordova@8.0.0
   - npm install
-  - cordova platform add android
+before_script:
+  - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
 script:
   - sh scripts/travis_build.sh
+  - cd android && ./gradlew build connectedCheck
   # - test -e platforms/android/app/build/outputs/apk/debug/app-debug.apk 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -36,3 +29,4 @@ cache:
   - $HOME/.npm
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
+  - $HOME/.android/build-cache
