--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
         "web-watch": "npm run web-clean && rollup -w -c",
         "watch": "node scripts/process_html && concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run web-clean",
-        "build": "node scripts/process_html && concurrently 'npm:styles' 'npm:web-build' && npx cap copy"
+        "build": "node scripts/process_html && concurrently 'npm:styles' 'npm:web-build'",
+        "build-cap": "npm run build && npx cap copy"
     },
     "cordova": {
         "platforms": [],
