Translation fixes and update

--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
         "version": "node scripts/bump-version.js",
         "lint": "tslint --project tsconfig.json -e '**/dts/**' -e '**/*.js'",
         "test": "jest",
+        "i18n-update": "cd scripts && npm run i18n-fetch",
+        "compile-locales": "if [ ! -d www/i18n/date ]; then node scripts/compile-locales; fi",
         "styles": "stylus -q -u autoprefixer-stylus src/styl/index.styl -c -o www/css/compiled/app.css",
         "styles-watch": "stylus -w -q -u autoprefixer-stylus src/styl/index.styl -o www/css/compiled/app.css",
         "compile": "tsc --outDir build/",
@@ -78,7 +80,6 @@
         "web-build": "npm run web-clean && npm run compile && rollup -c",
         "web-watch": "npm run web-clean && rollup -w -c",
         "watch": "node scripts/inject-conf && concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
-        "compile-locales": "if [ ! -d www/i18n/date ]; then node scripts/compile-locales; fi",
         "prebuild": "npm run web-clean",
         "build": "node scripts/inject-conf && concurrently 'npm:compile-locales' 'npm:styles' 'npm:web-build'",
         "build-copy": "npm run build && npx cap copy",
