--- a/package.json
+++ b/package.json
@@ -81,9 +81,8 @@
         "web-watch": "npm run web-clean && rollup -w -c",
         "watch": "node scripts/inject-conf && concurrently 'npm:compile-watch' 'npm:web-watch' 'npm:styles-watch'",
         "prebuild": "npm run web-clean",
-        "build": "node scripts/inject-conf && concurrently 'npm:compile-locales' 'npm:styles' 'npm:web-build'",
-        "build-copy": "npm run build && npx cap copy",
-        "run-android": "npm run build-copy && cd android && ./gradlew installDebug"
+        "build": "node scripts/inject-conf && concurrently 'npm:compile-locales' 'npm:styles' 'npm:web-build' && npx cap copy",
+        "run-android": "npm run build && cd android && ./gradlew installDebug"
     },
     "jest": {
         "moduleFileExtensions": [
